--- a/style.css
+++ b/style.css
@@ -55,18 +55,40 @@ body {
 }
 
 .controls {
+  position: relative;
+  height: 200px;
+  width: 100%;
   display: none;
-  justify-content: space-between;
 }
 
 .controls i {
-  padding: 25px 0;
-  color: #e7e7e7;
-  text-align: center;
-  cursor: pointer;
-  font-size: 1.3rem;
-  width: calc(100% / 4);
-  border-right: 1px solid #414142;
+  width: 40px;
+  height: 40px;
+  background: #e7e7e7;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.controls .up {
+  top: 25%;
+}
+
+.controls .down {
+  top: 75%;
+}
+
+.controls .left {
+  left: 30%;
+}
+
+.controls .right {
+  left: 70%;
 }
 
 @media screen and (max-width: 800px) {
