--- a/style.css
+++ b/style.css
@@ -56,16 +56,16 @@ body {
 
 .controls {
   position: relative;
-  height: 200px;
+  height: 250px;
   width: 100%;
   display: none;
 }
 
 .controls i {
-  width: 40px;
-  height: 40px;
+  width: 50px;
+  height: 50px;
   background: #e7e7e7;
-  border-radius: 50%;
+  border-radius: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -84,11 +84,11 @@ body {
 }
 
 .controls .left {
-  left: 25%;
+  left: 30%;
 }
 
 .controls .right {
-  left: 75%;
+  left: 70%;
 }
 
 @media screen and (max-width: 800px) {
